k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: application-share
  labels:
    name: application-share
